--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~18.2.11",
     "@angular/youtube-player": "~18.2.11",
     "@auth0/angular-jwt": "~5.2.0",
-    "dompurify": "~3.1.7",
+    "dompurify": "^3.2.5",
     "file-saver": "~2.0.5",
     "marked": "~14.0.0",
     "openmeteo": "^1.1.4",
